examples/test/testpolicy10431.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10431
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key0: value17
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value40
          key41: value15
          key20: value29
      podSelector:
        matchLabels:
          key44: value29
          key32: value30
          key47: value31
